Fix IntelliJ code analysis warnings and refactor duplicate code
- Fix Raw Type warnings in RestrictedURLClassLoader and ComponentContainer
- Replace deprecated URL constructor with file.toURI().toURL()
- Extract duplicate argument parsing logic to ParserUtils
- Add @SuppressWarnings for deprecated Parquet API usage
- All IntelliJ warnings resolved and build successful

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>